[tool.poetry]
name = "questionpy-docs"
version = "0.1.0"
description = "QuestionPy documentation"
authors = ["Technische Universität Berlin, innoCampus <info@isis.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.1.3"
mkdocs-awesome-pages-plugin = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
