[tool.poetry]
name = "questionpy-docs"
version = "0.1.0"
description = "QuestionPy documentation"
authors = ["Technische Universität Berlin, innoCampus <info@isis.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-material = "^9.5.13"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-monorepo-plugin = "^1.1.0"
mkdocs-redirects = "^1.2.1"
mkdocs-devbuild-plugin = {path = "./mkdocs-devbuild-plugin"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
