[tool.poetry]
name = "mkdocs-devbuild-plugin"
version = "0.0.0"
description = "Allow building docs from dev repositories."
authors = ["Technische Universität Berlin, innoCampus <info@isis.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
devbuild = "mkdocs_devbuild_plugin:DevBuildPlugin"
